--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
 
     <link rel="stylesheet" href="./style.css" />
-    <title>DOM</title>
+    <title>Thử tài tính toán</title>
   </head>
 
   <body>
