--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
           <button class="startBtn">Bắt đầu</button>
           <button class="replayBtn hidden">Chơi lại</button>
         </div>
-        <h4 style="padding-top: 30px; color: blue">
-          Kết quả phép tính làm tròn đến số thập phân thứ nhất nhé bạn ơi !!!
-        </h4>
+        <div style="padding-top: 30px; color: blue">
+          <h4 style="padding: 10px 0;">Hướng dẫn chơi:</h4>
+          <p>1. sau khi nhập kết quả thì nhấn phím enter trên bàn phím để trả lời</p>
+          <p>2. kết quả được làm tròn đến thập phân thứ nhất. VD: 0.37 thì viết 0.4</p>
+        </div>
       </div>
     </div>
 
